[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Other/Reusable/Laser/Laser.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Other/Reusable/Laser/Laser1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Other/Reusable/Laser/Laser2.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Other/Reusable/Laser/light texture.png" type="Texture" id=4]

[sub_resource type="ShaderMaterial" id=1]

render_priority = 0

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=3]

custom_solver_bias = 0.0
radius = 3.99507
height = 18.3863

[sub_resource type="Curve" id=4]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]

flags = 4
width = 2048
curve = SubResource( 4 )

[sub_resource type="Curve" id=6]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0.00153609, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.463438, 0.532227 ), -1.93482, -1.93482, 0, 0, Vector2( 0.922902, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]

flags = 4
width = 2048
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]

render_priority = 0
trail_divisor = 1
trail_size_modifier = SubResource( 7 )
emission_shape = 1
emission_sphere_radius = 1.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 3.0
scale_random = 0.0
scale_curve = SubResource( 5 )
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Emission Shape", "Scale", "Trail" ]

[node name="Laser" type="KinematicBody2D" index="0"]

scale = Vector2( 1.75, 1.75 )
input_pickable = false
collision_layer = 4
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

material = SubResource( 1 )
frames = SubResource( 2 )
animation = "default"
playing = true
flip_h = true
_sections_unfolded = [ "Material", "Offset", "Transform" ]

[node name="HitBox" type="Area2D" parent="." index="1"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 9
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox" index="0"]

position = Vector2( 2.33017, 0 )
rotation = 1.5708
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Destroy" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="active" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false

[node name="Trail" type="Particles2D" parent="." index="4"]

modulate = Color( 1, 0, 0, 1 )
position = Vector2( -11.7106, 0 )
emitting = true
amount = 20
lifetime = 0.3
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 8 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Time", "Transform" ]

[node name="Light2D" type="Light2D" parent="." index="5"]

enabled = true
editor_only = false
texture = ExtResource( 4 )
offset = Vector2( 0, 0 )
texture_scale = 0.5
color = Color( 1, 0, 0, 1 )
energy = 0.65
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Shadow" ]

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]

[connection signal="timeout" from="Destroy" to="." method="_on_Destroy_timeout"]

[connection signal="timeout" from="active" to="." method="_on_active_timeout"]


